--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,13 @@
 <resources>
     <string name="app_name">셔틀위치 운전기사용</string>
+    <string name="app_info">
+        셔틀 버스의 위치를 확인할 수 있는 애플리케이션입니다. (운전자용)\n
+        전송된 위치 정보는 위치 전송 중단 시 즉시 서버에서 삭제됩니다.\n
+        전송된 위치 정보는 애플리케이션 운영 목적(사용자 앱의 맵에 마커 표시)으로만 사용됩니다.\n
+        실수로 끄지 않을 경우에 대비해, 지정된 경로에서 일정 거리 이상 멀어지거나,
+        장시간 위치 정보 전송이 지속되는 전송이 자동으로 중단됩니다.\n
+        \n
+        버전: d test 1.0\n
+        문의: chiho1221@naver.com\n
+    </string>
 </resources>
