[hotfix] 백그라운드 위치 전송 권한 설정
<FIN>
상위 안드로이드 버전에서 위치 권한을 '항상 허용'으로 설정하지 않으면 백그라운드 위치 전송 안되는 문제
- Dexter 추가해 권한 확인: ACCESS_BACKGROUND_LOCATION
- 앱 환경 설정으로 이동해 권한 설정하도록 유도
<TODO>
테스트 필요

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,6 @@
         버전: d test 1.0\n
         문의: chiho1221@naver.com\n
     </string>
+    <string name="need_permission">앱 실행을 위해서는\n<b>설정으로 이동</b> - <b>권한</b> - <b>위치</b> - <b>항상 허용</b>\n설정이 필요합니다.\n\n권한 설정 후 앱을 <b>재시작</b>해 주세요.\n
+    </string>
 </resources>
