--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">셔틀위치 운전기사용</string>
+    <string name="app_name">셔틀위치 운전자용</string>
     <string name="app_info">
         셔틀버스의 위치를 확인할 수 있는 애플리케이션입니다. (운전자용)\n\n전송된 위치 정보는 위치 전송 중단 시 즉시 서버에서 삭제됩니다.\n전송된 위치 정보는 서비스 제공 목적(사용자 앱의 지도에 마커 표시)으로만 사용됩니다.\n\n실수로 위치 전송을 중단하지 않을 경우에 대비해, 지정된 경로에서 일정 거리 이상 떨어지거나 장시간 위치 전송이 지속되는 경우, 전송이 자동으로 중단됩니다.\n
         \n
